--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,3 +10,5 @@
 @import './blocks/services_brands';
 @import './blocks/services_types';
 @import './blocks/services_prices';
+@import './blocks/services_prices_info';
+@import './blocks/footer';
