--- a/src/styles/blocks/_services_prices_info.scss
+++ b/src/styles/blocks/_services_prices_info.scss
@@ -3,7 +3,7 @@
   text-align: center;
 }
 
-.services_prices__info-text {
+.price__info-text {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
